--- a/thanks-fes-web/src/app/components/atoms/fes-select/fes-select.component.html
+++ b/thanks-fes-web/src/app/components/atoms/fes-select/fes-select.component.html
@@ -4,6 +4,7 @@
     #selectRef
     [id]="elementId"
     [value]="value"
+    [placeholder]="placeholder"
     [disabled]="disabled"
     (selectionChange)="_select($event.value)"
   >
