--- a/thanks-fes-web/src/app/components/pages/question/question.component.html
+++ b/thanks-fes-web/src/app/components/pages/question/question.component.html
@@ -1,16 +1,16 @@
 <div class="question-page">
   <ng-container *ngIf="step === ''">
-    <span class="large-title">開始まで少々お待ちください</span>
+    <span class="large-title">開始までしばらくお待ちください</span>
   </ng-container>
 
   <ng-container *ngIf="step === 'タイトル'">
-    <img id="thanks-fes-title" src="/assets/images/logo.png" />
+    <img id="title-image" src="/assets/images/logo.png" />
   </ng-container>
 
   <ng-container *ngIf="step === 'オープニング'">
     <div class="period-guide-glass">
       <div class="period-guide-container">
-        <span class="period-guide-title">家次・たなゆり感謝祭</span>
+        <span class="period-guide-title">オールスター感謝祭</span>
         <span class="period-guide"
           >全員参加型クイズ大会<br />スコアが高い人に豪華賞品！</span
         >
@@ -44,17 +44,7 @@
 
   <ng-container *ngIf="step === '問題開始'">
     <span class="question-title"
-      >{{
-        question.questionFormat === "動画"
-          ? "動画"
-          : period.number === 3 && question.index === 1
-          ? "家次"
-          : period.number === 3 && question.index === 2
-          ? "たなゆり"
-          : period.number === 3 && question.index === 3
-          ? "2次会"
-          : ""
-      }}問題</span
+      >{{ question.questionFormat === "動画" ? "動画" : "" }}問題</span
     >
     <audio src="/assets/audios/question.mp3" autoplay></audio>
   </ng-container>
@@ -213,19 +203,19 @@
 
   <img
     *ngIf="step === '総合チームランキングタイトル'"
-    id="total-team-ranking-title"
+    id="title-image"
     src="/assets/images/total-team-ranking-title.png"
   />
 
   <img
-    *ngIf="step === '総合個人ランキングタイトル'"
-    id="total-panelist-ranking-title"
+    *ngIf="step === '総合ランキングタイトル'"
+    id="title-image"
     src="/assets/images/total-panelist-ranking-title.png"
   />
 
   <img
     *ngIf="step === '景品発表'"
-    id="award-prize-title"
+    id="title-image"
     src="/assets/images/award-prize-title.png"
   />
 
@@ -235,11 +225,12 @@
     src="/assets/images/sponsor.png"
   />
 
-  <img
-    *ngIf="step === 'エンディング'"
-    id="ending-title"
-    src="/assets/images/ending.png"
-  />
+  <div *ngIf="step === 'エンディング'" class="d-flex-column-center gy-9">
+    <img class="w-60" src="/assets/images/logo.png" /><img
+      class="w-80"
+      src="/assets/images/thanks.png"
+    />
+  </div>
 
   <ng-container
     *ngIf="
@@ -247,8 +238,8 @@
       step === 'ピリオド成績' ||
       step === '総合チームランキング' ||
       step === '総合チーム成績' ||
-      step === '総合個人ランキング' ||
-      step === '総合個人成績'
+      step === '総合ランキング' ||
+      step === '総合成績'
     "
   >
     <div class="ranking-container">
@@ -291,11 +282,11 @@
           <span
             *ngIf="
               period?.panelistType === '個人' ||
-              step === '総合個人ランキング' ||
-              step === '総合個人成績'
+              step === '総合ランキング' ||
+              step === '総合成績'
             "
             class="second-label"
-            >{{ result.elapsedSecond.toFixed(2) }}秒</span
+            >{{ result.elapsedSecond.toFixed(1) }}秒</span
           >
         </div>
       </div>
@@ -308,7 +299,7 @@
                 : "チームランキング"
               : step === "総合チームランキング" || step === "総合チーム成績"
               ? "総合チームランキング"
-              : "総合個人ランキング"
+              : "総合ランキング"
           }}</span
           ><span
             *ngIf="
