--- a/thanks-fes-web/src/app/components/pages/panelist/panelist.component.html
+++ b/thanks-fes-web/src/app/components/pages/panelist/panelist.component.html
@@ -209,7 +209,7 @@
       <span *ngIf="result && result.score" class="period-label-no-shadow"
         >{{ result.score }}<span class="pl-3" style="font-size: 28px">P</span>
       </span>
-      <span *ngIf="result && !result.score" class="small-title">落選... </span>
+      <span *ngIf="result && !result.rank" class="small-title">落選... </span>
     </ng-container>
   </ng-container>
 </div>
