--- a/thanks-fes-web/src/app/components/atoms/fes-input/fes-input.component.html
+++ b/thanks-fes-web/src/app/components/atoms/fes-input/fes-input.component.html
@@ -10,6 +10,7 @@
     [type]="passwordShowing ? 'text' : type"
     [placeholder]="placeholder"
     [disabled]="disabled"
+    [maxLength]="maxLength"
     (focus)="imeComposing = false"
     (input)="_input(inputRef.value)"
     (keyup.enter)="_submit(inputRef.value)"
