--- a/thanks-fes-web/src/app/components/pages/panelist/panelist.component.scss
+++ b/thanks-fes-web/src/app/components/pages/panelist/panelist.component.scss
@@ -98,6 +98,9 @@
   line-height: 48px;
   text-align: center;
 
+  background-color: #ff00c9;
+  color: white;
+
   &.A {
     background-color: #ff0000;
     color: white;
