--- a/thanks-fes-web/src/app/components/pages/question/question.component.html
+++ b/thanks-fes-web/src/app/components/pages/question/question.component.html
@@ -88,11 +88,7 @@
       >
         <div
           *ngIf="question.file"
-          class="question-additional-info"
-          [ngClass]="{
-            'vertical-info': !horizontalLayout,
-            'horizontal-info': horizontalLayout
-          }"
+          [ngClass]="{ 'd-flex-center': horizontalLayout }"
         >
           <img
             *ngIf="question.questionFormat === '画像'"
@@ -101,6 +97,8 @@
                 ? question.file.questionPath
                 : question.file.answerPath || question.file.questionPath
             "
+            [style.width]="question.file.width + 'px'"
+            [style.height]="question.file.height + 'px'"
           />
           <video
             *ngIf="question.questionFormat === '動画'"
@@ -110,6 +108,8 @@
                 : question.file.answerPath || question.file.questionPath
             "
             autoplay
+            [style.width]="question.file.width + 'px'"
+            [style.height]="question.file.height + 'px'"
           ></video>
         </div>
         <div
@@ -226,8 +226,8 @@
   />
 
   <div *ngIf="step === 'エンディング'" class="d-flex-column-center gy-9">
-    <img class="w-60" src="/assets/images/logo.png" /><img
-      class="w-80"
+    <img class="w-65" src="/assets/images/logo.png" /><img
+      class="w-90"
       src="/assets/images/thanks.png"
     />
   </div>
