--- a/thanks-fes-web/src/app/styles/global.scss
+++ b/thanks-fes-web/src/app/styles/global.scss
@@ -148,3 +148,21 @@ $glass-padding: 4px;
 @function text-shadow($w, $h, $blur, $color, $i) {
   @return calc($w * $i) calc($h * $i) $blur $color;
 }
+
+#wake-lock-overlay {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  @extend .d-flex-column-center;
+  @extend .gy-9;
+  @extend .text-primary;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+
+  &.title-page {
+    background-color: rgba(0, 0, 0, 0);
+    padding-top: 240px;
+  }
+}
