--- a/thanks-fes-web/src/app/components/pages/question/question.component.scss
+++ b/thanks-fes-web/src/app/components/pages/question/question.component.scss
@@ -516,6 +516,7 @@ $text-question-image-height: 640px;
     .question-box {
       width: 840px;
       span {
+        padding: 0 24px;
         line-height: auto;
       }
     }
