modify readItem and questionPreview

--- a/thanks-fes-web/src/app/components/pages/admin/admin.component.html
+++ b/thanks-fes-web/src/app/components/pages/admin/admin.component.html
@@ -110,7 +110,7 @@
             'text-disabled':
               item.text.startsWith('(') && item.text.startsWith('(')
           }"
-          >{{ item.text }}</span
+          >{{ item.text || "..." }}</span
         >
       </div>
     </div>
