--- a/thanks-fes-web/src/app/components/pages/question/question.component.html
+++ b/thanks-fes-web/src/app/components/pages/question/question.component.html
@@ -64,7 +64,7 @@
     <video
       id="question-video-preview"
       [ngClass]="question.file.height < question.file.width ? 'w-100' : 'h-100'"
-      [src]="question.file.questionPath"
+      [src]="question.file.fullQuestionPath"
       autoplay
       (ended)="autoplayEnded('question-video-preview')"
     ></video>
@@ -122,7 +122,7 @@
             id="question-video"
             [src]="
               step === '解答開始'
-                ? question.file.questionPreviewPath
+                ? question.file.questionPath
                 : question.file.answerPath
             "
             autoplay
