--- a/thanks-fes-web/src/app/components/pages/question/question.component.html
+++ b/thanks-fes-web/src/app/components/pages/question/question.component.html
@@ -303,10 +303,7 @@
                 ? "チーム"
                 : "")
           }}</span>
-          <div
-            *ngIf="!(period?.panelistType === '個人')"
-            class="point-container"
-          >
+          <div class="point-container">
             <span class="point-label">{{ result.score }}</span>
             <span class="unit-label">P</span>
           </div>
