--- a/thanks-fes-web/src/app/components/pages/question/question.component.scss
+++ b/thanks-fes-web/src/app/components/pages/question/question.component.scss
@@ -24,7 +24,7 @@ $yellow-highlight: #fffc4b;
   @extend .gy-9;
 }
 
-#title-image {
+.title-image {
   width: 65vw;
   transform: translate(100px, 150px) scale(0);
   transition: transform 1s;
