--- a/thanks-fes-web/src/app/components/pages/panelist/panelist.component.html
+++ b/thanks-fes-web/src/app/components/pages/panelist/panelist.component.html
@@ -217,3 +217,11 @@
     </ng-container>
   </ng-container>
 </div>
+
+<fes-button
+  class="reload-button"
+  [transparent]="true"
+  buttonClass="fs-12 gx-1 px-3 py-2"
+  (emitClick)="reload()"
+  ><span class="fs-16 mdi mdi-reload"></span><span>更新</span></fes-button
+>
